# modular-vlm-finetune

./: .gitignore  README.md  VINTERN_INTEGRATION_ANALYSIS.md  configure-device.sh  demo.py  pyproject.toml  requirements.txt  run_train.py  setup-gpu.sh  setup.sh  setup_kaggle.sh  test_training_pipeline.py  train.py  validate_vintern_integration.py  verify_gradients.py
configs/: ablation_config.yaml  bridge_config.yaml  config.yaml  data_config.yaml  deepspeed_zero2.json  device_profiles.yaml  kaggle_t4.yaml  model_config.yaml  model_configs.yaml  resource_configs.yaml  training_configs.yaml
metrics/: __init__.py  compute_score.py  evaluate_model.py  evaluation.ipynb  vqa_metrics.py
metrics/bleu/: bleu.py
metrics/cider/: cider.py
metrics/meteor/: meteor.py
metrics/wup/: __init__.py  wup.py
notebooks/: Vintern_1B_Test.ipynb  kaggle_notebook.ipynb  kaggle_notebook.py
outputs/training/: progress.json
scripts/: base_exp.py  base_experiment.py  collect_ablation_results.py  eval.py  exp1_better_mlp.py  exp1_residual_bridge.py  exp2_multi_token.py  exp3_attention_bridge.py  exp3_tile_attention.py  exp4_mini_qformer.py  exp5_qformer.py  exp6_gated_fusion.py  exp6_linear.py  run_all_experiments.py  training_runner.py
src/: __init__.py
src/cli/: download_data.sh
src/data/: COLLATOR_README.md  USAGE_EXAMPLES.py  __init__.py  collator.py  collator_examples.py  collator_onesample.py  collator_vlm.py  data_actions.py  dataset.py  download_data.py  environment.py  finetune_dataset.py  lazy_loaders.py  loaders.py  onesample_dataset.py  processor.py  training_data_provider.py  unified_loader.py
src/middleware/: config.py  config_loader.py  logger.py
src/modeling/: __init__.py  bridge_modules.py
src/models/: __init__.py  architecture.py  projector.py  projectors.py  registry.py  vision_encoders.py  vision_tower.py  vlm.py
src/models/legacy/: __init__.py  projector.py  vintern.py  vision_tower.py
src/schema/: __init__.py  data_schema.py
src/training/: __init__.py  finetune_setup.py  finetune_trainer.py  trainer.py
src/utils/: __init__.py  checkpoint.py  logger.py  metrics.py
utils/: data_loader_helper.py  device_detector.py  path_management.py
