[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-benchmark"
version = "0.1.0"
description = "Modular Vision-Language Model fine-tuning framework optimized for resource-constrained environments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VLM Team", email = "team@example.com"}
]
requires-python = ">=3.11"

dependencies = [
    # Core dependencies
    # IMPORTANT: PyTorch 2.2.2 with CUDA 12.1 support for L40S GPU
    # Do NOT change version - 2.2.2 is stable and well-tested for Vintern-1B
    "torch==2.2.2",
    "torchvision==0.17.2",
    # IMPORTANT: transformers==4.38.2 is REQUIRED for Vintern-1B v3_5 support
    # Do NOT change to 4.40.0+ or older versions - will break model loading
    "transformers==4.38.2",
    "pydantic>=2.0.0",
    "peft>=0.10.0",
    "accelerate>=0.27.0",
    
    # Vision and attention libraries (required for InternVL)
    "timm>=0.9.0",
    "einops>=0.7.0",
    
    # Image processing
    "pillow>=10.0.0",
    "torchvision>=0.15.0",
    
    # Utilities
    "numpy<2",  # PyTorch 2.2.2 requires NumPy 1.x - do NOT pin to numpy==2.x
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "nltk>=3.8.0",
    "kagglehub>=0.1.0",
    "pandas>=1.5.0",
    
    # Development
    "ipython>=8.0.0",
]

[project.optional-dependencies]
kaggle = [
    # Kaggle-specific optimizations
]

logging = [
    "wandb>=0.16.0",
]

metrics = [
    "sacrebleu>=2.4.0",
    "rouge-score>=0.1.2",
]

quantization = [
    "bitsandbytes>=0.42.0",
]

flash-attn = [
    "flash-attn>=2.5.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

all = [
    "vlm-benchmark[logging,metrics,quantization,flash-attn,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/vlm-benchmark"
Repository = "https://github.com/yourusername/vlm-benchmark"
Issues = "https://github.com/yourusername/vlm-benchmark/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
